# Fragmento

./: .gitmodules  CMakeLists.txt  TOODO.txt
Editor/: CMakeLists.txt
Editor/Editor/: Editor.h
Editor/Editor/Panels/: Dockspace.h  EntityList.h  GameViewPort.h  ImGuiSettings.h  MainMenuBar.h  Panels.h  SceneHiearchyPanel.h  Settings.h  TransformComponentPanel.h
src/: CMakeLists.txt
src/core/: Application.cpp  Application.h  Input.cpp  Input.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/entity/: Entity.cpp  Entity.h  EntityGroup.h  EntityObserver.cpp  EntityObserver.h  EntityRegistry.cpp  EntityRegistry.h
src/entity/components/: Components.cpp  Components.h  PlayerController2D.h  Selectable.h  Shapes.h
src/modules/animation/: Animation.h  AnimationPlayer.cpp  AnimationPlayer.h
src/modules/camerController/: CameraController.h
src/modules/camera/: Camera.h
src/modules/entityComponents/: SpriteComponent.h
src/modules/entityGrid/: EntityGrid.h
src/modules/gridScene/: EntityGrid.h  GridScene.h
src/modules/uiPanels/: BasicPanels.h  EntityInfo.h
src/modules/worldGrid/: WorldGrid.cpp  WorldGrid.h
src/renderer/: Draw.h
src/scene/: Scene.cpp  Scene.h  SceneHandler.cpp  SceneHandler.h  SceneState.h
src/ui/: GuiWrapper.cpp  GuiWrapper.h  ImGuiPanel.h  themes.h
src/ui/ImGuiPanel/: ImGuiPanel.h  ImGuiPanelController.h
src/ui/panels/: BasicPanels.h  CameraInfo.h  EntityInfo.h  EntityList.cpp  EntityList.h  MouseInfo.h
src/utility/: FileLoader.cpp  FileLoader.h  Logger.h
test/: CMakeLists.txt  main.cpp
test/Sandbox/: CMakeLists.txt  main.cpp
test/Sandbox/Scenes/: assetsFolderScene.h  enttTest.h  imGuiTest.h  imguiFonts.h  scene.h  spriteTest.h
test/Scenes/: assetsFolderScene.h  enttTest.h  spriteTest.h
test/Test/: CMakeLists.txt  main.cpp  utility.cpp
